--- a/css/styles.css
+++ b/css/styles.css
@@ -49,19 +49,24 @@ p {
   h1 {
     font-size: 4.8rem;
   }
+
   h2 {
     font-size: 3.2rem;
   }
+
   h3 {
     font-size: 2.4rem;
   }
+
   h4 {
     font-size: 3.2rem;
   }
+
   p {
     font-size: 1.8rem;
   }
 }
+
 section {
   display: flex;
   margin-top: 9.6rem;
@@ -90,6 +95,7 @@ button {
   border: none;
   cursor: pointer;
 }
+
 button a {
   color: white;
 }
@@ -110,13 +116,13 @@ header {
   border-bottom: 2px solid HSL(334 10% 14%/10%);
 }
 
-nav li > a {
+nav li>a {
   padding: 0.5rem 1.5rem;
   border-radius: 50px;
   transition: 0.3s;
 }
 
-nav li > a:hover {
+nav li>a:hover {
   background-color: #FC3A79;
   color: white;
 }
@@ -171,18 +177,23 @@ nav a {
   #logo {
     width: 60px;
   }
+
   .hidden {
     display: inline;
   }
+
   .tablet-nav {
     display: none;
   }
+
   .ml-auto {
     margin-left: auto;
   }
+
   .mr-auto {
     margin-right: 0;
   }
+
   .tablet-nav {
     display: flex;
     flex-direction: column;
@@ -199,31 +210,39 @@ nav a {
     overflow: hidden;
     transition: 0.5s;
   }
+
   .tablet-nav ul {
     opacity: 0;
   }
+
   .none-divider1 {
     display: none;
   }
+
   .tablet-nav.active {
     height: 92px;
     background-color: skyblue;
   }
+
   .tablet-nav.active ul {
     opacity: 1;
   }
+
   .hamburger-menu {
     cursor: pointer;
     margin-left: auto;
   }
 }
+
 @media screen and (max-width: 600px) {
   .mobile-nav {
     display: none;
   }
+
   .tablet-nav {
     position: static;
   }
+
   .mobile-nav {
     display: flex;
     flex-direction: column;
@@ -240,35 +259,51 @@ nav a {
     overflow: hidden;
     transition: 0.2s;
   }
+
   .mobile-nav ul {
     opacity: 0;
   }
+
   .tablet-nav {
     padding: 0;
   }
+
   .mobile-nav.active {
     height: 180px;
     background-color: skyblue;
   }
+
   .mobile-nav.active ul,
   .tablet-nav.active ul {
     opacity: 1;
   }
+
   .ml-auto {
     margin-left: 0;
   }
+
   .none-divider2 {
     display: none;
   }
 }
+
 @media screen and (max-width: 380px) {
+
   .contact-infos,
   .nav-links {
     display: flex;
     flex-direction: column;
     gap: 2rem;
   }
+
+  .mobile-nav.active {
+    height: 280px;
+    background-color: skyblue;
+  }
 }
+
+
+ 
 .img-container {
   max-width: 94rem;
 }
@@ -277,16 +312,20 @@ nav a {
 .hero h3 {
   margin-bottom: 0;
 }
+
 .hero h3 {
   color: #FC3A79;
   font-weight: 100;
 }
+
 .hero p {
   max-width: 60rem;
 }
+
 .hero a {
   text-decoration: none;
 }
+
 .hero button {
   display: flex;
   align-items: center;
@@ -319,7 +358,7 @@ nav a {
 .img-fill {
   width: 100%;
   -o-object-fit: fill;
-     object-fit: fill;
+  object-fit: fill;
   position: relative;
   top: 6.4rem;
 }
@@ -342,7 +381,7 @@ nav a {
 .card img {
   width: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .card-content {
@@ -372,23 +411,28 @@ nav a {
   align-items: flex-start;
   justify-content: flex-start;
 }
+
 .cta .container {
   margin-left: 2.4rem;
   align-items: flex-start;
 }
+
 .cta .container a {
   text-decoration: none;
 }
+
 .cta .container .flex {
   font-family: "Montserrat", sans-serif;
   font-size: 1.8rem;
   gap: 4rem;
 }
+
 .cta .container .flex .mail {
   background: #FC3A79;
   color: white;
   padding: 2.4rem 4.8rem;
 }
+
 .cta .container .flex .phone {
   background: HSL(334 10% 14%/10%);
   color: HSL(334 10% 14%/100%);
@@ -401,29 +445,36 @@ nav a {
     margin-inline: 2rem;
   }
 }
+
 @media screen and (max-width: 650px) {
   .cta * {
     align-items: flex-start;
     text-align: start;
   }
+
   .cta .container {
     margin-left: 0;
   }
+
   .cta .container .flex {
     flex-direction: column;
   }
+
   .cta button {
     font-size: 1.4rem;
   }
 }
+
 .presentation {
   align-items: flex-start;
   width: 100vw;
 }
+
 .presentation .container {
   align-items: flex-start;
   padding-inline: 4rem;
 }
+
 .presentation .container p,
 .presentation .container h3 {
   margin-left: 6.4rem;
@@ -449,7 +500,7 @@ nav a {
   max-height: 60vh;
   max-height: 60vh;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 @keyframes carousel {
@@ -457,21 +508,27 @@ nav a {
     transform: translateX(-30%);
   }
 }
+
 .what-you-get {
   align-items: space-evenly;
 }
+
 .what-you-get * {
   align-items: flex-start;
 }
+
 .what-you-get .grid-container {
   grid-template-columns: repeat(2, 1fr);
 }
+
 .what-you-get h3 {
   margin-inline: 2rem;
 }
+
 .what-you-get .container p {
   max-width: 40rem;
 }
+
 .what-you-get .container p,
 .what-you-get .container h3 {
   text-align: start;
@@ -481,15 +538,19 @@ nav a {
 .service * {
   align-items: flex-start;
 }
+
 .service h3 {
   text-transform: none;
 }
+
 .service .grid-container {
   grid-template-columns: repeat(3, 1fr);
 }
+
 .service .container p {
   max-width: 40rem;
 }
+
 .service .container p,
 .service .container h3 {
   text-align: start;
@@ -502,35 +563,44 @@ nav a {
   background: HSL(334 10% 14%/10%);
   border-radius: 5rem;
 }
+
 .setup .button-container button {
   background: none;
   color: HSL(334 10% 14%/100%);
 }
+
 .setup .button-container .active {
   background: HSL(334 10% 14%/100%);
   color: white;
 }
+
 .setup .mobile {
   display: none;
   background: HSL(334 10% 14%/50%);
 }
+
 .setup .mobile button {
   padding: 0.8rem 5.6rem;
 }
+
 .setup .hidden {
   display: none;
 }
+
 .setup .show {
   display: grid;
 }
+
 .setup .grid-container {
   grid-template-columns: repeat(4, 1fr);
 }
+
 .setup .design-tools h4,
 .setup .development-tools h4 {
   font-size: 1.6rem;
   margin: 0;
 }
+
 .setup .design-tools .item,
 .setup .development-tools .item {
   padding-block: 1rem;
@@ -538,6 +608,7 @@ nav a {
   background-color: HSL(334 10% 14%/10%);
   border-radius: 0.8rem;
 }
+
 .setup .development-tools img {
   width: 4.8rem;
 }
@@ -547,33 +618,42 @@ nav a {
     grid-template-columns: repeat(2, 1fr);
   }
 }
+
 @media screen and (max-width: 800px) {
+
   .presentation .container p,
   .presentation .container h3 {
     text-align: start;
     margin-left: 0px;
   }
+
   .service * {
     align-items: flex-start;
   }
+
   .service .grid-container {
     grid-template-columns: 1fr;
   }
+
   .what-you-get .grid-container {
     grid-template-columns: 1fr;
   }
 }
+
 @media screen and (max-width: 600px) {
   .setup .button-container {
     display: none;
   }
+
   .setup .mobile {
     display: flex;
   }
+
   .setup .grid-container {
     grid-template-columns: 1fr;
   }
 }
+
 .accordion-section {
   margin-inline: 4rem;
 }
@@ -626,6 +706,7 @@ nav a {
   display: none;
   background-color: #fff;
 }
+
 .accordion-content p {
   text-align: start;
   max-width: 80rem;
@@ -656,10 +737,12 @@ footer {
   margin-top: 12rem;
   padding-bottom: 0.8rem;
 }
+
 footer p {
   font-family: "Lora", serif;
   font-size: 1.4rem;
 }
+
 footer ul a {
   font-weight: bold;
   font-family: "Montserrat", sans-serif;
@@ -675,15 +758,18 @@ footer ul a {
     flex-direction: column-reverse;
   }
 }
+
 @media screen and (max-width: 450px) {
   footer {
     font-size: 1.2rem;
     text-align: center;
   }
+
   footer p {
     font-size: 1.2rem;
   }
 }
+
 /* 
 
 @media screen and (max-width : 1200px) {
@@ -741,4 +827,5 @@ footer ul a {
 		font-size: $fs-body;
 	}
 }
-*//*# sourceMappingURL=styles.css.map */
+*/
+/*# sourceMappingURL=styles.css.map */
